--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <div class="full-width">
                 <div class="half-width">
-                    <h1><span>ROUGUE</span> PICKINGS</h1>
+                    <h1><span>ROGUE</span> PICKINGS</h1>
                 </div>
                 <div class="half-width">
                     <nav>
